chore: update config
ensures that the code aligns with the official chart being a wrapper

--- a/charts/atlantis/templates/deployment-control.yaml
+++ b/charts/atlantis/templates/deployment-control.yaml
@@ -13,6 +13,11 @@ When deployment.type == "deployment":
 - Our Rollout resource is not created (handled by rollout.yaml template)
 */}}
 
+{{/* Run compatibility validations */}}
+{{- include "atlantis.validateSubchartCompatibility" . }}
+{{- include "atlantis.validateDeploymentType" . }}
+{{- include "atlantis.validateEnhancedStorage" . }}
+
 {{- if eq .Values.deployment.type "rollout" }}
 ---
 # When using Rollouts, we need to disable the official chart's deployment
