--- a/charts/atlantis/templates/service-preview.yaml
+++ b/charts/atlantis/templates/service-preview.yaml
@@ -6,11 +6,11 @@ metadata:
   labels:
     {{- include "atlantis.labels" . | nindent 4 }}
 spec:
-  type: {{ .Values.atlantis.service.type }}
+  type: {{ .Values.atlantisConfig.service.type }}
   selector:
     {{- include "atlantis.selectorLabels" . | nindent 4 }}
   ports:
-    - port: {{ .Values.atlantis.service.port }}
+    - port: {{ .Values.atlantisConfig.service.port }}
       targetPort: 4141
       protocol: TCP
       name: http
